<resources>
    <string name="app_name">Wallpaper_exam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_popular">Popular</string>
    <string name="menu_random">Random</string>
    <string name="menu_liked">Liked</string>
    <string name="menu_history">History</string>
    <string name="menu_about">About</string>
    <string name="menu_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>